# apex-goldilocks

./: BRIDGING.md  Cargo.toml  LICENSING-POLICY.md  README.md  SOVEREIGNTY.md  package-lock.json  package.json
bridge/: goldilocks_atlas_bridge.c
cli/: Cargo.toml
cli/src/: main.rs
crates/apex-goldilocks-cli/: Cargo.toml
crates/apex-goldilocks-cli/src/: main.rs
crates/apex-goldilocks-core/: Cargo.toml  build.rs
crates/apex-goldilocks-wasm/: Cargo.toml
crates/apex-hologram/: Cargo.toml
crates/atlas-embeddings-v2/: Cargo.toml
crates/goldilocks/: Cargo.toml
crates/goldilocks/src/: lib.rs  polynomial.rs
crates/hologram-goldilocks/: Cargo.toml
crates/multiplicity-ensembles/: Cargo.toml
crates/multiplicity-runtime/: Cargo.toml
crates/multiplicity-runtime/src/: lib.rs
crates/multiplicity-runtime/src/harness/: mod.rs
crates/multiplicity-runtime/tests/: harness_echobraid_flow.rs
crates/pirtm-compiler/: Cargo.toml  build.rs
crates/pirtm-compiler/src/: ace.rs  compiler.rs  diagnostic.rs  lib.rs  linker.rs  main.rs  types.rs  validator.rs
crates/pirtm-compiler/tests/: compiler_tests.rs  linker_tests.rs
crates/pirtm-compiler/tree-sitter-pirtm/: grammar.js  package-lock.json  package.json  tree-sitter.json
crates/pirtm-compiler/tree-sitter-pirtm/src/: grammar.json  node-types.json  parser.c
crates/pirtm-compiler/ts/: lsp_handler.ts  server.ts  validators.ts
docs/: ARCHITECTURE.md  EXPERIMENTAL_REPORT.md  PIKERNEL_IMPLEMENTATION.md  Whitepaper_ The Hologram Architecture — A Framework for Provably Correct Distributed Systems.docx  generator_generator_architecture_formal_specification_math_clean_v_2.md  hologram_compilation_v2.md  poly-ontological_unified_math_clean_specification_v_1.md  prime_structure_math_clean_unified_specification_48_96_256.md  resonant_homomorphic_framework_math_clean_revision.md  smm_foundation_v_1.md  universal_language_math_clean_revision.md  universal_resonance_calculus_formal_core_math_clean (1).md
docs/adr/: ### Summary of Completed Work_  1. Cargo Crate C.._.docx  ADR-001-APEX-UNIFICATION.md  ADR-003-Goldilocks-First-Fork.md  ADR-037-Multiplicity-Stack-Integration.md  ADR-038-Math-Lab-Wiring.md  Apex Unification Architecture and Scaffold Comple.._.docx  Apex-Hologram_ Port and Unification Complete_  I.._.docx  I have located the document ▸ Thought Process_  C.._.docx  I have proceeded with verifying and aligning the.._.docx  I have successfully completed the formal mathemat.._.docx  I have successfully implemented the FFI bindings.._.docx  I will look into  _home_multiplicity_crates_goldi.._.docx  I_ll search for references to architectural metap.._.docx  The 96-Class Structure.md  The core architecture is now stabilized and verif.._.docx  Yes — generate the adapter. The packet already fr.._.docx  _---_.docx  amplituhedron_clean_formulation_v_1.md  coherence_calculus_unified_clean_specification.md  deterministic_pseudorandom_invariants_math_clean_formalization_v_2.md  digital_resonance_model_math_clean_specification (1).md  mathematodynamics_clean_spec_v_0.md  mod_48_page_theory_clean_spec_v_1 (1).md  modular_structural_arithmetic_clean_formulation_canvas.md  morphisms_prime_structure_math_clean_specification (1).md  ▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀.._.docx  ✦ The Apex Unification is now complete and produc.._.docx
docs/atlas/: Atlas - Introduction.docx
docs/governance/: ADR-003-Goldilocks-First-Hard-Fork.md  FORK-BOUNDARY-POLICY.md
docs/multiplicity/: The Multiplicity Core Roadmap.md
docs/multiplicity/adr/: ADR-032.md  ADR-033.md  ADR-034.md  index.md
docs/spec/: Hologram _ Atlas — Consolidated Phase Mirror Report.docx  Project Proposal_ Development of the Sigmatics Compiler for the Atlas_Sage Mode 2.docx
hologram-sdk/rust/hologram-onnx-compiler/: Cargo.toml
hologram-sdk/rust/hologram-onnx-compiler/src/: error.rs
hologram-sdk/rust/hologram-onnx-compiler/src/hrm/: types.rs
hologram-sdk/rust/hologram-onnx-compiler/src/hrm/graph/: ir.rs  memory.rs
hologram-sdk/rust/hologram-onnx-compiler/src/hrm/ops/: conv.rs  mod.rs
math-lab/: package-lock.json  package.json  vite.config.ts
math-lab/src/components/dashboard/: Visualize.tsx
public/: pnpm-lock.yaml
scripts/: enforce_no_floats.sh  run_scientific_experiment.py  validate_stack.sh
src/: package-lock.json  package.json
src-tauri/: Cargo.toml
src-tauri/src/: lib.rs
tests/: test_pikernel_certificates.py  test_pikernel_integration.py  test_pikernel_kernel.py  test_pikernel_l1proj.py  test_pikernel_projectors.py
tests/integration/: e2e_coherence_test.py  test_bridge.c
