[workspace]
members = [
    "crates/apex-goldilocks-core",
    "crates/apex-goldilocks-cli",
    "crates/atlas-embeddings-v2",
    "crates/hologram-goldilocks",
    "crates/apex-hologram",
    "crates/apex-goldilocks-wasm",
    "crates/multiplicity-ensembles",
    "crates/multiplicity-runtime",
    "crates/goldilocks",
    "crates/pirtm-compiler",
    "crates/hologram-app",
    "crates/holoapp-cli",
]

exclude = [
    "benches",
    "hologram-sdk/python/hologram-pytorch",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["UOR Foundation"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/UOR-Foundation/hologramapp"
keywords = ["hologram", "compute", "canonicalization", "compiler", "ffi"]
categories = ["science", "mathematics", "algorithms"]

[workspace.dependencies]
goldilocks = { path = "crates/goldilocks" }
log = "0.4"
env_logger = "0.10"

# Internal crates
pirtm-compiler = { path = "crates/pirtm-compiler" }
atlas-core = { path = "packages/atlas/atlas-core" }
hologram-backends = { path = "packages/hologram/hologram-backends" }
hologram-compiler = { path = "packages/hologram/hologram-compiler" }
hologram-core = { path = "packages/hologram/hologram-core" }
hologram-ffi = { path = "packages/hologram/hologram-ffi" }
hologram-memory-manager = { path = "packages/hologram/hologram-memory-manager" }
aep-ethics-commutation = { path = "packages/atlas/aep-ethics-commutation" }
aep-sovereignty-gate = { path = "packages/atlas/aep-sovereignty-gate" }
hologram-tracing = { path = "packages/hologram/hologram-tracing" }
ccm = { path = "packages/ccm" }
ccm-bjc-codec = { path = "packages/ccm/ccm-applications/bjc-codec" }
ccm-coc = { path = "packages/ccm/ccm-coc" }
ccm-coherence = { path = "packages/ccm/ccm-coherence" }
ccm-core = { path = "packages/ccm/ccm-core" }
ccm-embedding = { path = "packages/ccm/ccm-embedding" }
ccm-factor = { path = "packages/ccm/ccm-factor" }
ccm-symmetry = { path = "packages/ccm/ccm-symmetry" }
hologram-kernels = { path = "packages/hologram/hologram-kernels" }
apex-atlas = { path = "packages/apex/apex-atlas" }
apex-pikernel = { path = "packages/apex/apex-pikernel" }

# External crate dependencies
atlas-embeddings = { path = "packages/apex/apex-embeddings" }

# Common external dependencies
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "fmt",
    "json",
    "registry",
] }
rayon = "1.10"
parking_lot = "0.12"
bytemuck = { version = "1.14", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
num-rational = { version = "0.4", default-features = false, features = ["serde"] }
num-integer = { version = "0.1", default-features = false }
num-traits = { version = "0.2", default-features = false, features = ["std"] }
blake3 = "1.5"
bincode = "1.3"
prometheus = "0.13"
lazy_static = "1.5"
clap = { version = "4.0", features = ["derive", "env"] }
colored = "2.0"
dialoguer = "0.11"
indicatif = "0.17"
tokio = { version = "1.30", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
async-trait = "0.1"
uuid = { version = "1.4", features = ["v4"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
bytes = "1.4"
dirs = "5.0"
sha2 = "0.10"
blake2 = "0.10"
itertools = "0.12"
ndarray = { version = "0.15", features = ["serde"] }
num_cpus = "1.16"
regex = "1.10"
toml = "0.8"
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }

# Internal crates (for external parts)
apex-core = { path = "core" }
apex-aep = { path = "aep" }
apex-moonshine = { path = "moonshine" }
apex-hologram = { path = "hologram" }
apex-sigmatics = { path = "sigmatics" }
hologram-app = { path = "crates/hologram-app" }

# Testing
proptest = "1.4"
criterion = { version = "0.5", features = ["html_reports"] }

# WASM support
getrandom = "0.2"

# Benchmarking utilities
chrono = { version = "0.4", features = ["serde"] }
rustc_version_runtime = "0.3"
