[workspace]
members = [
    "crates/apex-goldilocks-core",
    "crates/apex-goldilocks-cli",
    "crates/atlas-embeddings-v2",
    "crates/hologram-goldilocks",
    "crates/apex-hologram",
    "crates/apex-goldilocks-wasm",
    "crates/multiplicity-ensembles",
    "crates/multiplicity-runtime",
    "crates/goldilocks",
    "crates/pirtm-compiler",
    "crates/hologram-app",
    "crates/holoapp-cli",
    "packages/apex/apex-pikernel",
]

exclude = [
    "benches",
    "hologram-sdk/python/hologram-pytorch",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["UOR Foundation"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/UOR-Foundation/hologramapp"
keywords = ["hologram", "compute", "canonicalization", "compiler", "ffi"]
categories = ["science", "mathematics", "algorithms"]

[workspace.dependencies]
goldilocks = { path = "crates/goldilocks" }
log = "0.4"
env_logger = "0.10"

# Internal crates
pirtm-compiler = { path = "crates/pirtm-compiler" }
apex-goldilocks-core = { path = "crates/apex-goldilocks-core" }
apex-hologram = { path = "crates/apex-hologram" }
apex-pikernel = { path = "packages/apex/apex-pikernel" }
multiplicity-runtime = { path = "crates/multiplicity-runtime" }
hologram-app = { path = "crates/hologram-app" }

# Common external dependencies
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "fmt",
    "json",
    "registry",
] }
rayon = "1.10"
parking_lot = "0.12"
bytemuck = { version = "1.14", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
num-rational = { version = "0.4", default-features = false, features = ["serde"] }
num-integer = { version = "0.1", default-features = false }
num-traits = { version = "0.2", default-features = false, features = ["std"] }
num-bigint = "0.4"
hex = "0.4"
rand = "0.8"
once_cell = "1.19"
approx = "0.5"
blake3 = "1.5"
bincode = "1.3"
prometheus = "0.13"
lazy_static = "1.5"
clap = { version = "4.0", features = ["derive", "env"] }
colored = "2.0"
dialoguer = "0.11"
indicatif = "0.17"
tokio = { version = "1.30", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
async-trait = "0.1"
uuid = { version = "1.4", features = ["v4"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
bytes = "1.4"
dirs = "5.0"
sha2 = "0.10"
blake2 = "0.10"
itertools = "0.12"
ndarray = { version = "0.15", features = ["serde"] }
num_cpus = "1.16"
regex = "1.10"
toml = "0.8"
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }

# Testing
proptest = "1.4"
criterion = { version = "0.5", features = ["html_reports"] }

# WASM support
getrandom = "0.2"

# Benchmarking utilities
chrono = { version = "0.4", features = ["serde"] }
rustc_version_runtime = "0.3"
