[package]
name = "apex-cli"
version = "0.1.0"
edition = "2021"
description = "Unified CLI for the Apex system"

[dependencies]
apex-core = { path = "../core" }
apex-aep = { path = "../aep" }
apex-moonshine = { path = "../moonshine" }
apex-hologram = { path = "../hologram" }
apex-sigmatics = { path = "../sigmatics" }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
clap = { version = "4.4", features = ["derive"] }

[[bin]]
name = "apex"
path = "src/main.rs"
