[package]
name = "apex-goldilocks-cli"
version.workspace = true
edition.workspace = true

[dependencies]
apex-goldilocks-core = { path = "../apex-goldilocks-core" }
multiplicity-runtime = { path = "../multiplicity-runtime" }
apex-hologram = { path = "../apex-hologram" }
goldilocks.workspace = true
pirtm-compiler.workspace = true
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
thiserror.workspace = true
log.workspace = true
env_logger.workspace = true
