[package]
name = "apex-goldilocks-wasm"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
apex-goldilocks-core = { path = "../apex-goldilocks-core" }
multiplicity-runtime = { path = "../multiplicity-runtime" }
multiplicity-ensembles = { path = "../multiplicity-ensembles" }
hologram-goldilocks = { path = "../hologram-goldilocks" }
goldilocks.workspace = true
pirtm-compiler.workspace = true
anyhow.workspace = true
